[package]
name = "git2mail"
version = "0.4.6"
authors = ["extiop"]
edition = "2024"
license = "LGPL-3.0-only"
description = "Pure Rust OSINT tool to find a GitHub user's email"
repository = "https://github.com/extiop/git2mail"
readme = "README.md"
keywords = ["github", "osint", "rust", "leak"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", default-features = false, features = ["wrap_help", "derive", "std"] }
itertools = "0.14"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
# logging
log = "0.4"
pretty_env_logger = "0.5"

[profile.release]
codegen-units = 1   # Use minimum codegen units for best size and runtime performances
opt-level = 3       # Optimize for maximum runtime performance
lto = true          # Enable Link Time Optimization
strip = true        # Removes symbols, reducing size
panic = "abort"     # Abort on panic
